--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-shallow-compare": "^15.4.1"
   },
   "dependencies": {
     "classnames": "2.2.5",
@@ -33,6 +35,9 @@
     "react": "15.4.1",
     "react-addons-transition-group": "15.4.1",
     "react-dom": "15.4.1",
-    "react-motion": "0.4.5"
+    "react-motion": "0.4.5",
+    "react-router": "^3.0.0",
+    "react-selectize": "^2.1.0",
+    "recharts": "^0.20.1"
   }
 }
