test configs and sample tests added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Official repo for Hack Oregon React component library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "",
+    "test": "mocha --compilers js:babel-core/register --require ./mocha.conf.js --require ignore-styles --colors -w ./components/**/*.test.js",
     "start": "start-storybook -p 6006",
     "lint": "eslint components stories",
     "deploy-storybook": "storybook-to-ghpages",
@@ -17,16 +18,28 @@
     "@kadira/storybook": "^2.21.0",
     "@kadira/storybook-addon-knobs": "^1.7.0",
     "@kadira/storybook-deployer": "^1.2.0",
+    "babel": "^6.5.2",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-stage-1": "^6.16.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
     "eslint": "^3.12.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-import-resolver-webpack": "^0.7.1",
+    "eslint-loader": "^1.6.1",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.8.0",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^3.2.0",
     "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-shallow-compare": "^15.4.1"
+    "react-addons-shallow-compare": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "sinon": "^1.17.7"
   },
   "dependencies": {
     "classnames": "2.2.5",
