--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
-    "analyze:build": "babel-node ./tools/analyzeBundle.js",
+    "analyze": "babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
     "start:prod:server": "cross-env NODE_ENV=production babel-node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
-    "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
-    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --opts ./mocha.opts 'src/**/*.test.js' && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watch",
-    "show:coverage": "npm run test:cover && open coverage/index.html",
+    "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
+    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
-    "cross-env": "2.0.1",
+    "cross-env": "3.1.3",
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
@@ -52,7 +52,8 @@
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
-    "reselect": "2.5.4"
+    "reselect": "2.5.4",
+    "styled-components": "1.4.2"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
@@ -75,8 +76,8 @@
     "chai-as-promised": "6.0.0",
     "chai-enzyme": "0.6.1",
     "chalk": "1.1.3",
+    "cheerio": "0.22.0",
     "coveralls": "2.11.15",
-    "cross-env": "3.1.3",
     "css-loader": "0.26.1",
     "enzyme": "2.6.0",
     "eslint": "3.14.1",
