--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-babel": "4.0.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "6.9.0",
     "eslint-watch": "2.1.14",
     "extract-text-webpack-plugin": "1.0.1",
