--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@kadira/storybook-addons": "^1.6.1",
     "classnames": "2.2.5",
+    "copy-to-clipboard": "^3.0.5",
     "d3": "3.5.6",
     "rc-slider": "^5.4.0",
     "react": "^15.4.2",
