--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "@kadira/storybook-addons": "^1.6.1",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
     "classnames": "2.2.5",
     "copy-to-clipboard": "^3.0.5",
     "d3": "3.5.6",
@@ -58,6 +60,7 @@
     "react-motion": "0.4.5",
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
-    "recharts": "^0.20.1"
+    "recharts": "^0.20.1",
+    "sinon-chai": "^2.8.0"
   }
 }
