Prevent deploys on pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,5 @@ deploy:
   bucket: hacko-housing-staging
   skip_cleanup: true
   local_dir: build
+  on:
+    condition: "$TRAVIS_PULL_REQUEST = false"
