Prevent deploys on pull requests - try 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ deploy:
   skip_cleanup: true
   local_dir: build
   on:
-    condition: "$TRAVIS_PULL_REQUEST = false"
+    condition: $TRAVIS_PULL_REQUEST = false
