--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "civic-platform-frontend",
+  "name": "civic-platform",
   "version": "0.0.1",
   "description": "Civic - A Hack Oregon Project",
   "engines": {
