--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.0",
     "mocha": "^3.2.0",
+    "node-notifier": "^5.0.2",
     "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.5.4",
     "webpack": "^2.2.1",
