--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
     "import/prefer-default-export": 0,
     "jsx-a11y/href-no-hash": 1,
     "jsx-quotes": 1,
+    "max-len": [0, { "ignoreComments": true, "ignoreStrings": true }],
     "no-alert": 0,
     "no-console": 1,
     "no-debugger": 1,
