--- a/package.json
+++ b/package.json
@@ -56,11 +56,16 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.5",
-    "d3": "3.5.6",
+    "d3": "^4.7.3",
+    "d3-format": "^1.1.1",
+    "d3-sankey": "^0.4.2",
+    "d3-shape": "^1.0.6",
+    "ramda": "^0.23.0",
     "rc-slider": "^5.4.0",
     "react": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-faux-dom": "^3.0.1",
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
