--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": ""
   },
   "dependencies": {
+    "@hackoregon/component-library": "^0.0.6",
     "express": "^4.14.1",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
