--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
+    "@hackoregon/component-library": "0.0.6",
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -45,8 +46,8 @@
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
     "ramda": "0.23.0",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
@@ -80,7 +81,7 @@
     "coveralls": "2.11.15",
     "css-loader": "0.26.1",
     "enzyme": "2.6.0",
-    "eslint": "3.14.1",
+    "eslint": "3.19.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-plugin-babel": "4.0.1",
     "eslint-plugin-import": "2.2.0",
