--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@hackoregon/component-library": "0.0.6",
+    "axios": "^0.16.1",
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -48,10 +49,16 @@
     "ramda": "0.23.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-faux-dom": "^3.0.1",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-form": "^6.6.0",
+    "redux-logger": "^2.8.2",
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
     "styled-components": "1.4.2"
