--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "scripts": {
     "clean": "rimraf ./build",
     "dev": "babel-node tools/dev",
+    "build": "webpack --config tools/webpack.config.babel.js --colors",
+    "build:server": "babel src --out-dir build --copy-files",
     "lint": "eslint src",
     "start": "",
-    "start:server": "node build/server",
+    "serve:app": "node build/server/index.js",
+    "preserve:static": "npm run build",
+    "serve:static": "node staticServer/index.js",
+    "preserve:server": "npm run build:server",
+    "go": "run-p serve:static serve:app",
     "test": "mocha src/**/*.test.js"
   },
   "repository": {
@@ -24,12 +30,25 @@
   },
   "dependencies": {
     "@hackoregon/component-library": "^0.0.6",
+    "app-root-dir": "^1.0.2",
+    "assets-webpack-plugin": "^3.5.1",
+    "css-loader": "^0.26.1",
     "express": "^4.14.1",
+    "file-loader": "^0.11.1",
+    "npm-run-all": "^4.0.2",
+    "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0-beta.6",
-    "react-router-dom": "^4.0.0-beta.6"
+    "react-helmet": "^5.0.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "2.1.0-beta.22"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -38,8 +57,10 @@
     "babel-loader": "^6.3.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
+    "babel-register": "^6.23.0",
     "colors": "^1.1.2",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
@@ -55,7 +76,6 @@
     "node-notifier": "^5.0.2",
     "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.5.4",
-    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.17.0",
     "webpack-node-externals": "^1.5.4"
