--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
+    "@hackoregon/civic-server": "^0.0.2",
     "@hackoregon/component-library": "^0.0.6",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
