--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-dom": "^15.4.2",
     "react-helmet": "^5.0.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
+    "react-router": "3.0.3",
     "react-router-dom": "^4.0.0-beta.6",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
