--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
+    "leaflet": "1.0.3",
     "ramda": "0.23.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-leaflet": "1.1.5",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
@@ -81,7 +83,7 @@
     "coveralls": "2.11.15",
     "css-loader": "0.26.1",
     "enzyme": "2.6.0",
-    "eslint": "3.14.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-plugin-babel": "4.0.1",
     "eslint-plugin-import": "2.2.0",
