--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "coveralls": "2.11.15",
     "css-loader": "0.26.1",
     "enzyme": "2.6.0",
-    "eslint": "3.14.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-plugin-babel": "4.0.1",
     "eslint-plugin-import": "2.2.0",
