--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "lint": "eslint src",
     "start": "",
     "serve:app": "node build/server/index.js",
-    "preserve:static": "npm run build",
     "serve:static": "node staticServer/index.js",
     "preserve:server": "npm run build:server",
+    "prego": "run-s build build:server",
     "go": "run-p serve:static serve:app",
     "test": "mocha src/**/*.test.js"
   },
@@ -30,13 +30,18 @@
   },
   "dependencies": {
     "@hackoregon/civic-server": "^0.0.2",
-    "@hackoregon/component-library": "^0.0.6",
+    "@hackoregon/component-library": "^0.1.2",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^6.7.7",
     "css-loader": "^0.26.1",
+    "css-modules-require-hook": "^4.0.6",
     "express": "^4.14.1",
     "file-loader": "^0.11.1",
+    "isomorphic-loader": "^1.6.2",
     "npm-run-all": "^4.0.2",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
@@ -49,13 +54,14 @@
     "redux": "^3.6.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "2.1.0-beta.22"
+    "webpack": "^2.3.3",
+    "webpack-partial": "1.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.0.0-beta.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
@@ -63,7 +69,6 @@
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.23.0",
     "colors": "^1.1.2",
-    "css-loader": "^0.26.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
