--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "axios": "^0.16.1",
     "@hackoregon/component-library": "0.1.1",
+    "axios": "^0.16.1",
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -51,6 +51,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-leaflet": "1.1.5",
+    "react-player": "0.15.0",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
