--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
+    "jinn": "jinn",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
