--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "d3": "4.8.0",
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
     "ramda": "0.23.0",
+    "rc-slider": "7.0.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-redux": "5.0.1",
