--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
+    "prop-types": "15.5.8",
     "ramda": "0.23.0",
     "rc-slider": "7.0.2",
     "react": "15.4.2",
