--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "^0.0.4",
-    "@hackoregon/component-library": "^0.1.5",
+    "@hackoregon/civic-server": "^0.0.5",
+    "@hackoregon/component-library": "^0.2.0",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.26.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "isomorphic-loader": "^1.6.2",
     "npm-run-all": "^4.0.2",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
