--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ramda": "0.23.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-leaflet": "^1.1.6",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
