--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "0.0.6",
+    "@hackoregon/component-library": "0.1.1",
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
@@ -46,6 +46,7 @@
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
+    "lodash": "^4.17.4",
     "prop-types": "15.5.8",
     "ramda": "0.23.0",
     "rc-slider": "7.0.2",
@@ -54,6 +55,8 @@
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
+    "react-select": "^1.0.0-rc.3",
+    "react-sticky": "^5.0.8",
     "recharts": "0.22.1",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
