--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
+    "leaflet": "^1.0.3",
     "query-string": "^4.3.3",
     "ramda": "0.23.0",
     "react": "15.4.1",
