--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@hackoregon/webpacker",
   "version": "0.0.1",
-  "description": "Compose your webpack configs",
+  "description": "Compose your webpack configs - comes with a default",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hackoregon/jinn"
+  },
   "scripts": {
     "start": "npm install",
     "prebuild": "npm run lint",
@@ -11,10 +15,10 @@
     "lint": "eslint src"
   },
   "keywords": [
-    "webpack"
+    "webpack",
+    "ramda",
+    "modular"
   ],
-  "author": "David Daniel <davidedaniel@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
