--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hackoregon/jinn"
+    "url": "https://github.com/hackoregon/webpacker"
   },
   "scripts": {
     "start": "npm install",
@@ -25,13 +25,11 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
     "babel-loader": "^7.0.0",
-    "colors": "^1.1.2",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "glob": "^7.1.1",
     "isomorphic-loader": "^1.6.3",
-    "node-notifier": "^5.1.2",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "style-loader": "^0.16.1",
@@ -40,6 +38,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -49,6 +48,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-react": "^6.10.3",
+    "version-bump-prompt": "^3.1.0"
   }
 }
