--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -16,6 +16,7 @@
     "postbuild": "npm run bump",
     "bump": "bump --prompt --commit --push",
     "postbump": "editme -w & npm prune --production",
+    "postpublish": "npm start",
     "lint": "eslint src"
   },
   "keywords": [
