--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "civic-platform",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Civic - A Hack Oregon Project",
   "engines": {
     "node": ">=6"
@@ -20,7 +20,7 @@
     "serve:app": "node build/server/index.js",
     "serve:static": "node staticServer/index.js",
     "preserve:server": "npm run build:server",
-    "prego": "run-s build build:server",
+    "pgo": "run-s build build:server",
     "go": "run-p serve:static serve:app",
     "test": "mocha src/**/*.test.js"
   },
@@ -29,8 +29,8 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "^0.0.5",
-    "@hackoregon/component-library": "^0.2.0",
+    "@hackoregon/civic-server": "0.0.6",
+    "@hackoregon/component-library": "^0.2.1",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
@@ -52,12 +52,14 @@
     "react-router-dom": "^4.0.0-beta.6",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "reselect": "^3.0.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-partial": "^2.0.2"
   },
   "devDependencies": {
+    "@hackoregon/webpacker": "^0.1.6",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
