--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -27,18 +27,23 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
     "babel-loader": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "^1.0.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
-    "isomorphic-loader": "^1.6.3",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.3"
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
