--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/webpacker",
-  "version": "0.1.7-beta.1",
+  "version": "0.1.7",
   "description": "Compose your webpack configs - comes with a default",
   "author": "David Daniel <davidedaniel@gmail.com>",
   "license": "MIT",
