--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "serve:app": "node build/server/index.js",
     "serve:static": "node staticServer/index.js",
     "preserve:server": "npm run build:server",
-    "pgo": "run-s build build:server",
-    "go": "run-p serve:static serve:app",
+    "prego": "BABEL_ENV=production run-s clean build build:server",
+    "go": "BABEL_ENV=production run-p serve:static serve:app",
     "test": "mocha src/**/*.test.js"
   },
   "repository": {
@@ -29,12 +29,11 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.6",
-    "@hackoregon/component-library": "^0.2.1",
+    "@hackoregon/civic-server": "^0.0.9",
+    "@hackoregon/component-library": "^0.2.5",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.26.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.14.1",
@@ -44,8 +43,8 @@
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "15.5.3",
+    "react-dom": "15.5.3",
     "react-helmet": "^5.0.2",
     "react-redux": "^5.0.3",
     "react-router": "3.0.3",
@@ -59,11 +58,12 @@
     "webpack-partial": "^2.0.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^0.1.6",
+    "@hackoregon/webpacker": "^0.1.7",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.0.0-beta.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
