--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "^0.0.9",
+    "@hackoregon/civic-server": "0.0.10",
     "@hackoregon/component-library": "^0.2.5",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
