--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "dev": "babel-node tools/dev",
     "build": "webpack --config tools/webpack.config.babel.js --colors",
     "build:server": "babel src --out-dir build --copy-files",
+    "build:prod": "NODE_ENV=production run-s build build:server",
     "lint": "eslint src",
-    "start": "",
+    "start": "NODE_ENV=production npm run go",
     "serve:app": "node build/server/index.js",
     "serve:static": "node staticServer/index.js",
     "preserve:server": "npm run build:server",
