--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "d3-format": "^1.2.0",
     "express": "4.14.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
