--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "serve:app": "node build/server/index.js",
     "serve:static": "node staticServer/index.js",
     "preserve:server": "npm run build:server",
-    "prego": "BABEL_ENV=production run-s clean build build:server",
-    "go": "BABEL_ENV=production run-p serve:static serve:app",
+    "pr:go": "BABEL_ENV=production run-s clean build build:server",
+    "go": "BABEL_ENV=production run-p serve:static",
     "test": "mocha src/**/*.test.js"
   },
   "repository": {
@@ -35,12 +35,16 @@
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
+    "compression": "^1.6.2",
     "css-loader": "^0.26.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "isomorphic-loader": "^1.6.2",
+    "lodash": "^4.17.4",
     "npm-run-all": "^4.0.2",
     "pm2": "^2.4.6",
     "postcss-loader": "^1.3.3",
@@ -54,10 +58,10 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "reselect": "^3.0.0",
+    "rxjs": "^5.1.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-partial": "^2.0.2"
+    "webpack": "^2.3.3"
   },
   "devDependencies": {
     "@hackoregon/webpacker": "^0.1.7",
@@ -65,14 +69,23 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.0.0-beta.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.23.0",
+    "babel-runtime": "^6.22.0",
+    "babili-webpack-plugin": "0.0.10",
+    "clean-webpack-plugin": "^0.1.15",
     "colors": "^1.1.2",
+    "html-webpack-plugin": "^2.28.0",
+    "lodash-webpack-plugin": "^0.11.2",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -85,7 +98,9 @@
     "mocha": "^3.2.0",
     "node-notifier": "^5.0.2",
     "regenerator-runtime": "^0.10.1",
+    "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.5.4",
+    "webpack-dev-server": "^2.4.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.17.0",
     "webpack-node-externals": "^1.5.4"
