--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "start": "npm-run-all --parallel test:watch start:dev",
     "lint": "esw src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "prebuild": "npm run clean && npm run lint && npm run test",
-    "build": "babel-node tools/build.js",
+    "prebuild:dev": "npm run clean && npm run lint && npm run test",
+    "build:dev": "babel-node tools/build.js",
+    "build": "NODE_ENV=production babel-node tools/build.js",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
@@ -45,11 +46,13 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "^0.0.8",
-    "@hackoregon/component-library": "^0.2.5",
+    "@hackoregon/civic-server": "0.0.8",
+    "@hackoregon/component-library": "0.2.5",
+    "@hackoregon/webpacker": "0.1.7",
     "babel-polyfill": "6.22.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "css-loader": "0.26.1",
     "d3-format": "^1.2.0",
     "express": "4.14.0",
     "invariant": "2.2.2",
@@ -67,7 +70,8 @@
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
-    "styled-components": "1.4.2"
+    "styled-components": "1.4.2",
+    "webpack": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
