--- a/package.json
+++ b/package.json
@@ -50,15 +50,29 @@
     "@hackoregon/component-library": "0.2.5",
     "@hackoregon/webpacker": "0.1.7",
     "babel-polyfill": "6.22.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-class-properties": "6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-react-inline-elements": "6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-register": "6.18.0",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "css-loader": "0.26.1",
     "d3-format": "^1.2.0",
     "express": "4.14.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "invariant": "2.2.2",
     "isomorphic-fetch": "2.2.1",
     "leaflet": "^1.0.3",
     "query-string": "^4.3.3",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.24.1",
     "ramda": "0.23.0",
     "react": "15.5.3",
     "react-dom": "15.5.3",
@@ -71,25 +85,14 @@
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
     "styled-components": "1.4.2",
-    "webpack": "^2.5.1"
+    "webpack": "^2.5.1",
+    "webpack-md5-hash": "0.0.5"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
     "babel-cli": "6.18.0",
     "babel-core": "6.20.0",
     "babel-eslint": "7.1.1",
-    "babel-loader": "6.4.1",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-class-properties": "6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-inline-elements": "6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
-    "babel-preset-latest": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-register": "6.18.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
     "chai-enzyme": "0.6.1",
@@ -106,9 +109,6 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "6.9.0",
     "eslint-watch": "2.1.14",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.24.1",
     "isparta": "4.0.0",
     "istanbul": "0.4.4",
     "jsdom": "9.8.3",
@@ -131,7 +131,6 @@
     "webpack": "1.14.0",
     "webpack-bundle-analyzer": "2.1.1",
     "webpack-dev-middleware": "1.9.0",
-    "webpack-hot-middleware": "2.13.2",
-    "webpack-md5-hash": "0.0.5"
+    "webpack-hot-middleware": "2.13.2"
   }
 }
