--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@hackoregon/civic-server": "0.0.8",
     "@hackoregon/component-library": "0.2.5",
     "@hackoregon/webpacker": "0.1.7",
+    "autoprefixer": "6.5.4",
+    "babel-core": "6.20.0",
     "babel-polyfill": "6.22.0",
     "babel-loader": "6.4.1",
     "babel-plugin-react-transform": "2.0.2",
@@ -74,8 +76,8 @@
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
     "ramda": "0.23.0",
-    "react": "15.5.3",
-    "react-dom": "15.5.3",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "react-leaflet": "^1.1.6",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
@@ -84,14 +86,17 @@
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
     "styled-components": "1.4.2",
+    "postcss-loader": "1.2.1",
     "webpack": "^2.5.1",
+    "json-loader": "0.5.4",
+    "css-loader": "0.26.1",
     "webpack-md5-hash": "0.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "6.5.4",
     "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
     "babel-eslint": "7.1.1",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
@@ -99,7 +104,6 @@
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
     "coveralls": "2.11.15",
-    "css-loader": "0.26.1",
     "enzyme": "2.6.0",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.0.0",
@@ -113,21 +117,17 @@
     "istanbul": "0.4.4",
     "jsdom": "9.8.3",
     "jsdom-global": "2.1.0",
-    "json-loader": "0.5.4",
     "mocha": "3.2.0",
     "mocha-clean": "^1.0.0",
     "mochawesome": "^1.5.1",
     "nock": "9.0.2",
     "npm-run-all": "3.1.2",
-    "postcss-loader": "1.2.1",
     "react-addons-test-utils": "15.4.1",
     "redux-immutable-state-invariant": "1.2.4",
     "redux-mock-store": "1.2.1",
     "rimraf": "2.5.4",
     "sinon": "1.17.6",
     "sinon-chai": "2.8.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-bundle-analyzer": "2.1.1",
     "webpack-dev-middleware": "1.9.0",
