--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ script:
 - npm run build
 deploy:
   provider: s3
-  access_key_id: "${AWS_ACCESS_KEY}"
-  secret_access_key: "${AWS_SECRET_KEY}"
+  access_key_id: "${AWS_ACCESS_KEY_ID}"
+  secret_access_key: "${AWS_SECRET_ACCESS_KEY}"
   region: us-west-2
   bucket: transportation.civicpdx.org
   skip_cleanup: true
