--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-housing",
-  "version": "0.1.5-beta-1",
+  "version": "0.1.5",
   "description": "Civic/Housing 2017",
   "main": "src/index.js",
   "contributors": [
