--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@hackoregon/webpacker": "0.1.7",
     "autoprefixer": "6.5.4",
     "babel-core": "6.20.0",
-    "babel-polyfill": "6.22.0",
     "babel-loader": "6.4.1",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-class-properties": "6.22.0",
@@ -59,6 +58,7 @@
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.2.11",
+    "babel-polyfill": "6.22.0",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
@@ -69,17 +69,20 @@
     "d3-format": "^1.2.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "invariant": "2.2.2",
-    "isomorphic-fetch": "2.2.1",
-    "leaflet": "^1.0.3",
-    "query-string": "^4.3.3",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
+    "invariant": "2.2.2",
+    "isomorphic-fetch": "2.2.1",
+    "json-loader": "0.5.4",
+    "leaflet": "^1.0.3",
+    "postcss-loader": "1.2.1",
+    "query-string": "^4.3.3",
     "ramda": "0.23.0",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-helmet": "^5.0.3",
     "react-leaflet": "^1.1.6",
-    "react-redux": "5.0.1",
+    "react-redux": "^5.0.1",
     "react-router": "3.0.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "4.0.7",
@@ -87,11 +90,9 @@
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
     "styled-components": "1.4.2",
-    "postcss-loader": "1.2.1",
+    "url-loader": "0.5.7",
     "webpack": "^2.5.1",
-    "json-loader": "0.5.4",
     "webpack-md5-hash": "0.0.5"
   },
   "devDependencies": {
