update for travis

--- a/.eslintrc
+++ b/.eslintrc
@@ -43,8 +43,9 @@
     "import/no-named-as-default": 2,
     "import/no-unresolved": 2,
     "import/prefer-default-export": 0,
-    "jsx-a11y/href-no-hash": 1,
+    "jsx-a11y/href-no-hash": 0,
     "jsx-quotes": 1,
+    "max-len": 0,
     "no-alert": 0,
     "no-console": 1,
     "no-debugger": 1,
