--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "build": "webpack --config tools/webpack.config.babel.js --colors",
     "build:server": "babel src --out-dir build --copy-files",
     "build:prod": "NODE_ENV=production run-s build build:server",
-    "lint": "eslint src",
+    "build:all": "BABEL_ENV=production run-s clean build build:server",
+    "lint": "eslint --fix src",
     "start": "NODE_ENV=production npm run go",
-    "serve:app": "node build/server/index.js",
-    "serve:static": "node staticServer/index.js",
+    "serve:app": "babel-node build/server/index.js",
+    "serve:static": "BABEL_ENV=production babel-node staticServer/index.js",
     "preserve:server": "npm run build:server",
-    "pr:go": "BABEL_ENV=production run-s clean build build:server",
-    "go": "BABEL_ENV=production run-p serve:static",
-    "test": "mocha src/**/*.test.js"
+    "go": "BABEL_ENV=production run-p serve:static serve:app",
+    "test": "eslint src"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10",
+    "@hackoregon/civic-housing": "^0.1.7",
+    "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
     "app-root-dir": "^1.0.2",
     "assets-webpack-plugin": "^3.5.1",
@@ -50,10 +51,10 @@
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
     "react": "15.5.3",
-    "react-dom": "15.5.3",
+    "react-dom": "^15.5.3",
     "react-helmet": "^5.0.2",
     "react-redux": "^5.0.3",
-    "react-router": "3.0.3",
+    "react-router": "^3.0.3",
     "react-router-dom": "^4.0.0-beta.6",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
@@ -61,7 +62,8 @@
     "rxjs": "^5.1.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-md5-hash": "^0.0.5"
   },
   "devDependencies": {
     "@hackoregon/webpacker": "^0.1.7",
@@ -80,12 +82,9 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.23.0",
-    "babel-runtime": "^6.22.0",
     "babili-webpack-plugin": "0.0.10",
     "clean-webpack-plugin": "^0.1.15",
     "colors": "^1.1.2",
-    "html-webpack-plugin": "^2.28.0",
-    "lodash-webpack-plugin": "^0.11.2",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -95,13 +94,15 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "lodash-webpack-plugin": "^0.11.2",
     "mocha": "^3.2.0",
     "node-notifier": "^5.0.2",
-    "regenerator-runtime": "^0.10.1",
     "react-transform-hmr": "^1.0.4",
+    "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.5.4",
-    "webpack-dev-server": "^2.4.1",
     "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.17.0",
     "webpack-node-externals": "^1.5.4"
   }
