update to webpack 2 + hot reloading in dev + dist for npm

--- a/package.json
+++ b/package.json
@@ -28,17 +28,15 @@
     "npm": ">=3"
   },
   "scripts": {
-    "clean": "rimraf ./build && mkdir build",
+    "clean": "rimraf build && mkdir build",
     "start": "npm-run-all --parallel test:watch start:dev",
     "lint": "esw src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "prebuild:dev": "npm run clean && npm run lint && npm run test",
-    "build:dev": "babel-node tools/build.js",
-    "build": "NODE_ENV=production babel-node tools/build.js",
+    "prebuild": "npm run clean && npm run lint && npm run test",
+    "build": "rimraf dist && babel-node tools/build.js",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
-    "start:production": "npm run build && npm run start:prod:server",
-    "start:prod:server": "cross-env NODE_ENV=production babel-node server",
+    "start:prod": "cross-env NODE_ENV=production node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
@@ -81,11 +79,12 @@
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.3",
+
     "react-leaflet": "^1.1.6",
     "react-redux": "^5.0.1",
-    "react-router": "3.0.0",
+    "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "4.0.7",
+    "react-router-redux": "^4.0.7",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4",
@@ -123,6 +122,7 @@
     "nock": "9.0.2",
     "npm-run-all": "3.1.2",
     "react-addons-test-utils": "15.4.1",
+    "react-hot-loader": "next",
     "redux-mock-store": "1.2.1",
     "rimraf": "2.5.4",
     "sinon": "1.17.6",
