--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,12 @@
 {
   "presets": [
-    "latest",
+    ["es2015", { "modules": false }],
     "react",
-    "stage-0"
+    "stage-1"
   ],
   "env": {
     "development": {
-      "presets": [
-        "react-hmre"
-      ],
-      "plugins": ["transform-class-properties"],
+      "plugins": ["react-hot-loader/babel", "transform-class-properties"],
     },
     "production": {
       "plugins": [
