--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@hackoregon/react-component-library",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.2",
   "description": "Official repo for Hack Oregon React component library",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "modules": "es/index.js",
   "scripts": {
-    "build": "babel src --out-dir lib --copy-files",
-    "test": "mocha --opts ./mocha.options ./src/**/*.test.js",
+    "build:esm": "babel src --out-dir es --copy-files --no-comments",
+    "build:cjs": "babel src --out-dir lib --copy-files --no-comments",
+    "build": "BABEL_ENV=esm npm run build:esm && BABEL_ENV=cjs npm run build:cjs",
+    "test": "BABEL_ENV=test mocha --opts ./mocha.options ./src/**/*.test.js",
     "test:watch": "npm run test -- -w",
-    "start": "start-storybook -p 6006",
-    "lint": "eslint src stories --fix",
-    "deploy-storybook": "storybook-to-ghpages",
-    "build-storybook": "build-storybook"
+    "lint": "eslint src stories --fix"
   },
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)",
   "license": "MIT",
@@ -25,30 +25,29 @@
     "@kadira/storybook-deployer": "^1.2.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-stage-1": "^6.16.0",
+    "babel-preset-stage-1": "^6.22.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
-    "enzyme": "^2.7.0",
-    "eslint": "^3.12.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-import-resolver-webpack": "^0.7.1",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-babel": "^4.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.10.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
     "mocha-clean": "^1.0.0",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "^15.5.3",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "source-map-support": "^0.4.11",
-    "lerna": "2.0.0-beta.38-31-g0749ea6"
+    "source-map-support": "^0.4.11"
   },
   "dependencies": {
     "@kadira/storybook-addons": "^1.6.1",
@@ -58,14 +57,14 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.5",
     "d3": "^4.7.3",
-    "d3-format": "^1.1.1",
+    "d3-format": "^1.2.0",
     "d3-sankey": "^0.4.2",
     "d3-shape": "^1.0.6",
     "ramda": "^0.23.0",
     "rc-slider": "^5.4.0",
-    "react": "^15.4.2",
-    "react-addons-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.3",
+    "react-addons-transition-group": "^15.5.3",
+    "react-dom": "^15.5.3",
     "react-faux-dom": "^3.0.1",
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
