--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-alpha.e7d4647a",
   "hoist": true,
   "private": true
 }
