--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-housing",
-  "version": "0.1.8",
+  "version": "1.0.0-alpha.e7d4647a",
   "description": "Civic/Housing 2017",
   "main": "src/index.js",
   "contributors": [
@@ -30,10 +30,10 @@
   "scripts": {
     "clean": "rimraf build && mkdir build",
     "start": "npm-run-all --parallel test:watch start:dev",
-    "lint": "esw src tools server webpack.config.* --color",
+    "lint": "eslint src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "prebuild": "npm run lint && npm run test",
-    "build": "rimraf dist && babel-node tools/build.js",
+    "-prebuild": "npm run lint && npm run test",
+    "build": "rimraf dist && babel-node ./tools/build.js",
     "analyze": "babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
@@ -48,89 +48,112 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.8",
-    "@hackoregon/component-library": "0.2.5",
-    "@hackoregon/webpacker": "0.1.7",
-    "autoprefixer": "6.5.4",
-    "babel-core": "6.20.0",
-    "babel-loader": "6.4.1",
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-class-properties": "6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
-    "babel-polyfill": "6.22.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-1": "6.16.0",
-    "babel-register": "6.18.0",
-    "compression": "1.6.2",
-    "cross-env": "3.1.3",
-    "css-loader": "0.26.1",
+    "@hackoregon/civic-logger": "^1.0.0-alpha.e7d4647a",
+    "@hackoregon/civic-server": "^0.0.10",
+    "@hackoregon/component-library": "^0.2.5",
+    "@hackoregon/webpacker": "^0.1.7",
+    "compression": "^1.6.2",
+    "cross-env": "^3.1.3",
     "d3-format": "^1.2.0",
-    "express": "4.14.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.24.1",
-    "invariant": "2.2.2",
-    "isomorphic-fetch": "2.2.1",
-    "json-loader": "0.5.4",
+    "express": "^4.14.1",
+    "invariant": "^2.2.2",
+    "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.0.3",
-    "postcss-loader": "1.2.1",
     "query-string": "^4.3.3",
-    "ramda": "0.23.0",
+    "ramda": "^0.23.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-helmet": "^5.0.3",
     "react-leaflet": "^1.1.6",
-    "react-redux": "^5.0.1",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.7",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "reselect": "2.5.4",
-    "style-loader": "0.13.1",
-    "styled-components": "1.4.2",
-    "url-loader": "0.5.7",
-    "webpack": "^2.5.1",
-    "webpack-md5-hash": "0.0.5"
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^3.0.0",
+    "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-eslint": "7.1.1",
-    "chai": "3.5.0",
-    "chai-as-promised": "6.0.0",
-    "chai-enzyme": "0.6.1",
-    "chalk": "1.1.3",
-    "cheerio": "0.22.0",
-    "coveralls": "2.11.15",
-    "enzyme": "2.6.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.0.0",
-    "eslint-plugin-babel": "4.0.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
+    "@hackoregon/webpacker": "^0.1.7",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "babili-webpack-plugin": "0.0.10",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
+    "clean-webpack-plugin": "^0.1.15",
+    "colors": "^1.1.2",
+    "coveralls": "^2.11.15",
+    "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "6.9.0",
-    "eslint-watch": "2.1.14",
-    "isparta": "4.0.0",
-    "istanbul": "0.4.4",
-    "jsdom": "9.8.3",
-    "jsdom-global": "2.1.0",
-    "mocha": "3.2.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-watch": "^2.1.14",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.4",
+    "jest": "^20.0.4",
+    "jsdom": "^9.8.3",
+    "jsdom-global": "^2.1.0",
+    "json-loader": "^0.5.4",
+    "lerna": "^2.0.0",
+    "lodash-webpack-plugin": "^0.11.2",
+    "mocha": "^3.2.0",
     "mocha-clean": "^1.0.0",
     "mochawesome": "^1.5.1",
-    "nock": "9.0.2",
-    "npm-run-all": "3.1.2",
-    "react-addons-test-utils": "15.4.1",
-    "react-hot-loader": "next",
-    "redux-mock-store": "1.2.1",
-    "rimraf": "2.5.4",
-    "sinon": "1.17.6",
-    "sinon-chai": "2.8.0",
+    "nock": "^9.0.2",
+    "node-notifier": "^5.0.2",
+    "npm-run-all": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "react-addons-test-utils": "^15.5.3",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-transform-hmr": "^1.0.4",
+    "redux-immutable-state-invariant": "^1.2.4",
+    "redux-mock-store": "^1.2.1",
+    "regenerator-runtime": "^0.10.1",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "webpack-bundle-analyzer": "2.1.1",
-    "webpack-dev-middleware": "1.9.0",
-    "webpack-hot-middleware": "2.13.2"
+    "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.1.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.0",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-node-externals": "^1.5.4"
   }
 }
