--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "civic-platform",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.e7d4647a",
   "description": "Civic - A Hack Oregon Project",
   "engines": {
     "node": ">=6"
@@ -30,7 +30,8 @@
     "url": "https://github.com/hackoregon/civic-platform"
   },
   "dependencies": {
-    "@hackoregon/civic-housing": "^0.1.8",
+    "@hackoregon/civic-emergency-response": "^0.1.0",
+    "@hackoregon/civic-housing": "^1.0.0-alpha.e7d4647a",
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
     "app-root-dir": "^1.0.2",
@@ -50,60 +51,19 @@
     "pm2": "^2.4.6",
     "postcss-loader": "^1.3.3",
     "ramda": "^0.23.0",
-    "react": "15.5.3",
+    "react": "^15.5.3",
     "react-dom": "^15.5.3",
-    "react-helmet": "^5.0.2",
+    "react-helmet": "^5.0.3",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.3",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "reselect": "^3.0.0",
     "rxjs": "^5.1.0",
     "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.5.1",
     "webpack-md5-hash": "^0.0.5"
-  },
-  "devDependencies": {
-    "@hackoregon/webpacker": "^0.1.7",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.0.0-beta.1",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-1": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "babili-webpack-plugin": "0.0.10",
-    "clean-webpack-plugin": "^0.1.15",
-    "colors": "^1.1.2",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-babel": "^4.0.1",
-    "eslint-plugin-flowtype": "2.29.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "lodash-webpack-plugin": "^0.11.2",
-    "mocha": "^3.2.0",
-    "node-notifier": "^5.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "regenerator-runtime": "^0.10.1",
-    "rimraf": "^2.5.4",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0",
-    "webpack-node-externals": "^1.5.4"
   }
 }
