working housing project with new babel-presets

--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-babel-presets",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.be5b7ddd",
   "private": true,
   "description": "Unified babel presets for civic",
   "main": "index.js",
