--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
+    "watch": "^1.0.2",
     "webpack": "^2.5.1",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
@@ -89,6 +90,7 @@
     "bump": "lerna publish --skip-git --skip-npm",
     "canary": "lerna publish --skip-git --skip-npm --canary",
     "clean": "lerna clean",
+    "watch": "node scripts/watch",
     "deploy-storybook": "storybook-to-ghpages",
     "in": "lerna run --scope",
     "link": "lerna exec npm link",
