--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,9 @@
 {
   "lerna": "2.0.0",
-  "version": "1.0.0-alpha.e7d4647a",
+  "version": "1.0.1-alpha.0",
+  "packages": [
+    "packages/*"
+  ],
   "hoist": true,
   "private": true
 }
