--- a/package.json
+++ b/package.json
@@ -7,24 +7,6 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-register": "^6.24.1",
     "babili-webpack-plugin": "0.0.10",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -87,7 +69,7 @@
     "bootstrap": "lerna bootstrap",
     "build-storybook": "build-storybook",
     "build": "lerna run build",
-    "bump": "lerna publish --skip-git --skip-npm",
+    "tag": "lerna publish --skip-npm",
     "canary": "lerna publish --skip-git --skip-npm --canary",
     "clean": "lerna clean",
     "watch": "node scripts/watch",
