--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-budget",
-  "version": "1.0.0-alpha.1c62c05f",
+  "version": "1.0.1-alpha.0",
   "description": "Civic/Budget 2017",
   "author": "David Daniel",
   "license": "MIT",
@@ -38,7 +38,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/component-library": "^1.0.1-alpha.0",
     "babel-polyfill": "^6.22.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
@@ -64,8 +64,8 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/civic-babel-presets": "^1.0.1-alpha.0",
+    "@hackoregon/webpacker": "^1.0.1-alpha.0",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "chai": "^3.5.0",
