--- a/packages/civic-logger/package.json
+++ b/packages/civic-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-logger",
-  "version": "1.0.0-alpha.1c62c05f",
+  "version": "1.0.1-alpha.0",
   "description": "just a logger",
   "main": "src/index.js",
   "private": true,
