--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-housing",
-  "version": "1.0.0-alpha.1c62c05f",
+  "version": "1.0.1-alpha.0",
   "description": "Civic/Housing 2017",
   "main": "src/index.js",
   "contributors": [
@@ -48,10 +48,10 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/civic-babel-presets": "^1.0.1-alpha.0",
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
-    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpacker": "^1.0.1-alpha.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "d3-format": "^1.2.0",
@@ -75,7 +75,7 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpacker": "^1.0.1-alpha.0",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
