--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-homelessness",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1-alpha.1",
   "description": "Civic/Homelessness 2017",
   "main": "src/index.js",
   "contributors": [
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "rimraf build && mkdir build",
     "start": "npm-run-all --parallel test:watch start:dev",
-    "lint": "esw src tools server webpack.config.* --color",
+    "lint": "eslint src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "npm run lint && npm run test",
     "build": "rimraf dist && babel-node tools/build.js",
@@ -44,10 +44,10 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.1-alpha.0",
+    "@hackoregon/civic-babel-presets": "^1.0.1-alpha.1",
     "@hackoregon/civic-server": "^0.0.10",
     "@hackoregon/component-library": "^0.2.5",
-    "@hackoregon/webpacker": "^1.0.1-alpha.0",
+    "@hackoregon/webpacker": "^1.0.1-alpha.1",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "d3-format": "^1.2.0",
@@ -71,7 +71,7 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/webpacker": "^1.0.1-alpha.0",
+    "@hackoregon/webpacker": "^1.0.1-alpha.1",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
