--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/component-library",
-  "version": "1.0.1-alpha.1",
+  "version": "1.0.1-alpha.0",
   "description": "Official repo for Hack Oregon React component library",
   "main": "lib/index.js",
   "modules": "es/index.js",
@@ -10,7 +10,7 @@
     "build": "BABEL_ENV=esm npm run build:esm && BABEL_ENV=cjs npm run build:cjs",
     "test": "BABEL_ENV=test mocha --opts ./mocha.options ./src/**/*.test.js",
     "test:watch": "npm run test -- -w",
-    "lint": "eslint src stories --fix"
+    "lint": "eslint src stories"
   },
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)",
   "license": "MIT",
@@ -19,10 +19,6 @@
     "url": "https://github.com/hackoregon/component-library"
   },
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "^3.3.0",
-    "@kadira/storybook": "^2.21.0",
-    "@kadira/storybook-addon-knobs": "^1.7.0",
-    "@kadira/storybook-deployer": "^1.2.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -50,8 +46,6 @@
     "source-map-support": "^0.4.11"
   },
   "dependencies": {
-    "@kadira/storybook-addons": "^1.6.1",
-    "babel-cli": "^6.24.1",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
@@ -69,8 +63,6 @@
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
-    "recharts": "^0.20.1",
-    "sinon-chai": "^2.8.0",
-    "webpack": "1.13.3"
+    "recharts": "^0.20.1"
   }
 }
