--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -44,7 +44,7 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "^0.0.10",
+    "@hackoregon/civic-server": "0.0.10",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
@@ -72,7 +72,7 @@
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
@@ -91,7 +91,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-1": "^6.22.0",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.23.0",
     "babili-webpack-plugin": "0.0.10",
     "chai": "^3.5.0",
@@ -102,7 +102,7 @@
     "clean-webpack-plugin": "^0.1.15",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -112,7 +112,7 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "isparta": "^4.0.0",
