--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
     "start": "npm-run-all --parallel test:watch start:dev",
-    "lint": "eslint src tools server webpack.config.* --color",
+    "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "-prebuild": "npm run clean && npm run lint && npm run test",
     "build": "babel-node tools/build.js",
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
