--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "rimraf build && mkdir build",
     "start": "npm-run-all --parallel test:watch start:dev",
-    "lint": "eslint src tools server webpack.config.* --color",
+    "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "npm run lint && npm run test",
     "build": "rimraf dist && babel-node tools/build.js",
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
