--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,8 @@
 {
-  "lerna": "2.1.0",
+  "lerna": "2.5.1",
   "version": "1.0.0-alpha.1c62c05f",
-  "packages": [
-    "packages/*"
-  ],
+  "useWorkspaces": true,
+  "npmClient": "yarn",
   "hoist": true,
   "private": true
 }
