fix build scripts & ver

--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@hackoregon/webpacker",
-  "version": "1.0.0-alpha.f1b97411",
+  "version": "1.0.0-alpha.fe716b58",
   "description": "Compose your webpack configs - comes with a default",
   "author": "David Daniel <davidedaniel@gmail.com>",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "module": "es/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/hackoregon/webpacker"
   },
   "scripts": {
-    "build": "BABEL_ENV=cjs ../../node_modules/.bin/babel src --out-dir lib",
+    "build:esm": "BABEL_ENV=esm ../../node_modules/.bin/babel src --out-dir es",
+    "build:cjs": "BABEL_ENV=cjs ../../node_modules/.bin/babel src --out-dir dist",
+    "build": "yarn build:cjs && yarn build:esm",
     "lint": "eslint --fix src"
   },
   "keywords": [
@@ -20,7 +22,7 @@
     "modular"
   ],
   "dependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.f1b97411",
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.fe716b58",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
