--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-emergency-response",
-  "version": "1.0.0-alpha.f1b97411",
+  "version": "1.0.0-alpha.fe716b58",
   "description": "Hack Oregon Front-end React + Redux Starter",
   "author": "David Daniel",
   "license": "MIT",
@@ -25,11 +25,11 @@
     "start": "npm run start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "babel-node tools/build.js",
-    "analyze": "babel-node ./tools/analyzeBundle.js",
-    "start:dev": "cross-env NODE_ENV=development babel-node server",
+    "build": "../../node_modules/.bin/babel-node tools/build.js",
+    "analyze": "../../node_modules/.bin/babel-node ./tools/analyzeBundle.js",
+    "start:dev": "cross-env NODE_ENV=development ../../node_modules/.bin/babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
-    "start:prod:server": "cross-env NODE_ENV=production babel-node server",
+    "start:prod:server": "cross-env NODE_ENV=production ../../node_modules/.bin/babel-node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
@@ -37,7 +37,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^1.0.0-alpha.f1b97411",
+    "@hackoregon/component-library": "^1.0.0-alpha.fe716b58",
     "axios": "^0.16.1",
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
@@ -66,63 +66,7 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.f1b97411",
-    "@hackoregon/webpacker": "^1.0.0-alpha.f1b97411",
-    "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.24.1",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
-    "chalk": "^1.1.3",
-    "cheerio": "^0.22.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "colors": "^1.1.2",
-    "coveralls": "^2.11.15",
-    "css-loader": "^0.28.0",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-babel": "^4.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "isparta": "^4.0.0",
-    "istanbul": "^0.4.4",
-    "jest": "^20.0.4",
-    "jsdom": "^9.8.3",
-    "jsdom-global": "^2.1.0",
-    "json-loader": "^0.5.4",
-    "lodash-webpack-plugin": "^0.11.2",
-    "mocha": "^3.2.0",
-    "mocha-clean": "^1.0.0",
-    "mochawesome": "^1.5.1",
-    "nock": "^9.0.2",
-    "node-notifier": "^5.0.2",
-    "npm-run-all": "^4.0.2",
-    "postcss-loader": "^1.3.3",
-    "react-addons-test-utils": "^15.5.3",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "react-transform-hmr": "^1.0.4",
-    "redux-immutable-state-invariant": "^1.2.4",
-    "redux-mock-store": "^1.2.1",
-    "regenerator-runtime": "^0.10.1",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.7",
-    "version-bump-prompt": "^3.1.0",
-    "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.1.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-node-externals": "^1.5.4"
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.fe716b58",
+    "@hackoregon/webpacker": "^1.0.0-alpha.fe716b58"
   }
 }
