--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/transportation",
-  "version": "1.0.0-alpha.f1b97411",
+  "version": "1.0.0-alpha.fe716b58",
   "description": "Hack Oregon Front-end React + Redux Starter",
   "author": "David Daniel",
   "license": "MIT",
@@ -25,12 +25,12 @@
     "start": "npm run start:dev",
     "lint": "esw src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "babel-node tools/build.js",
+    "build": "../../node_modules/.bin/babel-node tools/build.js",
     "jinn": "jinn",
-    "analyze": "babel-node ./tools/analyzeBundle.js",
-    "start:dev": "npx -p babel-cli cross-env NODE_ENV=development babel-node server",
+    "analyze": "../../node_modules/.bin/babel-node ./tools/analyzeBundle.js",
+    "start:dev": "npx -p babel-cli cross-env NODE_ENV=development ../../node_modules/.bin/babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
-    "start:prod:server": "cross-env NODE_ENV=production babel-node server",
+    "start:prod:server": "cross-env NODE_ENV=production ../../node_modules/.bin/babel-node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
@@ -38,7 +38,7 @@
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^1.0.0-alpha.f1b97411",
+    "@hackoregon/component-library": "^1.0.0-alpha.fe716b58",
     "axios": "^0.16.1",
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
@@ -67,7 +67,7 @@
     "styled-components": "^1.4.2"
   },
   "devDependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.f1b97411",
-    "@hackoregon/webpacker": "^1.0.0-alpha.f1b97411"
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.fe716b58",
+    "@hackoregon/webpacker": "^1.0.0-alpha.fe716b58"
   }
 }
