--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -25,7 +25,7 @@
     "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "../../node_modules/.bin/babel-node tools/build.js",
+    "build": "cross-env NODE_ENV=production ../../node_modules/.bin/babel-node tools/build.js",
     "analyze": "../../node_modules/.bin/babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development ../../node_modules/.bin/babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
