--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -28,7 +28,7 @@
     "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "rimraf dist && ../../node_modules/.bin/babel-node tools/build.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production ../../node_modules/.bin/babel-node tools/build.js",
     "analyze": "../../node_modules/.bin/babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
     "start:dev": "cross-env NODE_ENV=development ../../node_modules/.bin/babel-node server",
