Don't run tests with yarn start for homelessness

--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "clean": "rimraf build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev",
+    "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "build": "rimraf dist && babel-node tools/build.js",
